# PCL-Principal-Curvature-CAN

./: CMakeLists.txt  CONTRIBUTING.md  README.md
example/: example.cpp
include/: principal_curvatures_can.hpp
src/: principal_curvatures_can.cpp
